--- a/myapp-customerwebapp-azure.Shared/myapp-customerwebapp-azure.Shared.csproj
+++ b/myapp-customerwebapp-azure.Shared/myapp-customerwebapp-azure.Shared.csproj
@@ -2,13 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <RootNamespace>myapp_customerwebapp_azure.Models</RootNamespace>
+    <RootNamespace>myapp_customerwebapp_azure.Shared</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Request\" />
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.13.0" />
   </ItemGroup>
 
 </Project>
