--- a/myapp-customerwebapp-azure.Server/appsettings.json
+++ b/myapp-customerwebapp-azure.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:customerly.database.windows.net,1433;Initial Catalog=customerly;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
