--- a/myapp-customerwebapp-azure.Application/myapp-customerwebapp-azure.Application.csproj
+++ b/myapp-customerwebapp-azure.Application/myapp-customerwebapp-azure.Application.csproj
@@ -13,6 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\myapp-customerwebapp-azure.Domain\myapp-customerwebapp-azure.Domain.csproj" />
     <ProjectReference Include="..\myapp-customerwebapp-azure.Shared\myapp-customerwebapp-azure.Shared.csproj" />
   </ItemGroup>
 
