--- a/myapp-customerwebapp-azure.Domain/myapp-customerwebapp-azure.Domain.csproj
+++ b/myapp-customerwebapp-azure.Domain/myapp-customerwebapp-azure.Domain.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Data\" />
     <Folder Include="Entities\" />
     <Folder Include="Interfaces\" />
   </ItemGroup>
