--- a/myapp-customerwebapp-azure.Server/myapp-customerwebapp-azure.Server.csproj
+++ b/myapp-customerwebapp-azure.Server/myapp-customerwebapp-azure.Server.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>9.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
@@ -26,6 +30,7 @@
     <ProjectReference Include="..\myapp-customerwebapp-azure.client\myapp-customerwebapp-azure.client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\myapp-customerwebapp-azure.Infrastructure\myapp-customerwebapp-azure.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
