--- a/myapp-customerwebapp-azure.client/package.json
+++ b/myapp-customerwebapp-azure.client/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ngrx/store": "^17.2.0",
     "bootstrap": "^5.3.7",
     "jest-editor-support": "*",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
