Insert step to display angular.json during build
Added step to show angular.json used by build.

--- a/.github/workflows/main_mytestapp.yml
+++ b/.github/workflows/main_mytestapp.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: Show angular.json used by build
+        run: cd myapp-customerwebapp-azure.client cat angular.json | grep maximumError
+
+
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
@@ -62,4 +66,5 @@ jobs:
           app-name: 'mytestapp'
           slot-name: 'Production'
           package: .
+
           
