Modify workflow to set location for angular.json
Updated the workflow to include a new step for setting the location before resolving the path of angular.json.

--- a/.github/workflows/main_mytestapp.yml
+++ b/.github/workflows/main_mytestapp.yml
@@ -28,9 +28,11 @@ jobs:
 
       - name: Show angular.json full path and maximumError
         run: |
-            $fullPath = Resolve-Path angular.json
-            Write-Host "Angular config file path: $fullPath"
-            Select-String -Path $fullPath -Pattern "maximumError"
+              Set-Location myapp-customerwebapp-azure.client
+              $fullPath = Resolve-Path angular.json
+              Write-Host "Angular config file path: $fullPath"
+              Select-String -Path $fullPath -Pattern "maximumError"
+
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
@@ -70,5 +72,6 @@ jobs:
           package: .
 
           
+
 
 
