--- a/myapp-customerwebapp-azure.Server/appsettings.json
+++ b/myapp-customerwebapp-azure.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:customerly.database.windows.net,1433;Initial Catalog=customerly;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
+    "DefaultConnection": "Server=tcp:customerly.database.windows.net,1433;Initial Catalog=customerly;User ID=rahulb9188;Password=Customerly2025##$$;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
