Changes for added store, moved files as per the clean architecture pattern etc

--- a/myapp-customerwebapp-azure.Infrastructure/myapp-customerwebapp-azure.Infrastructure.csproj
+++ b/myapp-customerwebapp-azure.Infrastructure/myapp-customerwebapp-azure.Infrastructure.csproj
@@ -9,8 +9,9 @@
 
   <ItemGroup>
     <Folder Include="Configuration\" />
-    <Folder Include="Repositories\Interfaces\" />
+    <Folder Include="Data\" />
     <Folder Include="Repositories\Implementations\" />
+    <Folder Include="Repositories\Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
