--- a/myapp-customerwebapp-azure.Application/myapp-customerwebapp-azure.Application.csproj
+++ b/myapp-customerwebapp-azure.Application/myapp-customerwebapp-azure.Application.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
+    <Folder Include="Services\" />
     <Folder Include="Validators\" />
   </ItemGroup>
 
