--- a/myapp-customerwebapp-azure.client/package.json
+++ b/myapp-customerwebapp-azure.client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ngrx/effects": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "bootstrap": "^5.3.7",
     "jest-editor-support": "*",
